Code comments + Prepare for release 3.0.1